--- a/Frontend/src/chat/index.html
+++ b/Frontend/src/chat/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
-
     <head>
         <title>Consult Doctor</title>
-        <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet"
-            id="bootstrap-css">
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="stylesheet" href="base.css">
+        <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="stylesheet" href="base.css" />
         <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
         <script src="httsp://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     </head>
@@ -20,17 +18,12 @@
                             <h3><span class="glyphicon glyphicon-comment"> </span>Welcome to SWEE-Chat with Doctor</h3>
                         </div>
                         <div class="panel-body">
-                            <ul class="chat">
-
-
-                            </ul>
+                            <ul class="chat"></ul>
                         </div>
                         <div class="panel-footer">
                             <div class="input-group">
-                                <input id="btn-input" type="text" class="form-control input-sm"
-                                    placeholder="Type your message here..." />
-                                <button class="send-button" id="btn-chat">
-                                    Send</button>
+                                <input id="btn-input" type="text" class="form-control input-sm" placeholder="Type your message here..." />
+                                <button class="send-button" id="btn-chat">Send</button>
                             </div>
                         </div>
                     </div>
@@ -42,12 +35,12 @@
         <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-firestore.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-storage.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
             integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
-            crossorigin="anonymous"></script>
+            crossorigin="anonymous"
+        ></script>
         <script type="text/javascript" src="script.js"></script>
         <script src="base.js"></script>
-
     </body>
-
 </html>
